[package]
name = "opfs"
version = "0.1.0"
authors = ["Shiba Shunta <courser4848@gmail.com>"]
edition = "2018"
description = "a Rust implementation of opfs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
memmap = "0.7.0"
